--- a/templates/about.html
+++ b/templates/about.html
@@ -51,6 +51,12 @@
             });
         });
     });
+
+    const image = document.querySelector('.image');
+    const randomTopDisplacement = Math.floor(Math.random() * 11) * 5; 
+    const randomLeftDisplacement = Math.floor(Math.random() * 11) * 5;
+    image.style.setProperty('--random-displacement-top', randomTopDisplacement);
+    image.style.setProperty('--random-displacement-left', randomLeftDisplacement);
 </script>
 <div class="bio-container">
     <!-- Picture on the left side -->
@@ -75,12 +81,12 @@
     </div>
     <!-- Pictures on the right side -->
     <div class="image-container">
-        <div class="image" style="background-image: url('../static/asset/images/self/blackswan.jpg');"></div>
-        <div class="image" style="background-image: url('../static/asset/images/self/glasses.jpg');"></div>
-        <div class="image" style="background-image: url('../static/asset/images/self/rebel.jpg');"></div>
-        <div class="image" style="background-image: url('../static/asset/images/self/sis.jpg');"></div>
-        <div class="image" style="background-image: url('../static/asset/images/self/story.jpg');"></div>
-        <div class="image" style="background-image: url('../static/asset/images/self/wow.jpg');"></div>
+        <div class="image" style="background-image: url('../static/asset/images/self/blackswan.jpg'); top: calc(var(--random-displacement-top) * 1vw); left: calc(var(--random-displacement-left) * 1vw)"></div>
+        <div class="image" style="background-image: url('../static/asset/images/self/glasses.jpg'); top: calc(var(--random-displacement-top) * 1vw); left: calc(var(--random-displacement-left) * 1vw)"></div>
+        <div class="image" style="background-image: url('../static/asset/images/self/rebel.jpg'); top: calc(var(--random-displacement-top) * 1vw); left: calc(var(--random-displacement-left) * 1vw)"></div>
+        <div class="image" style="background-image: url('../static/asset/images/self/sis.jpg'); top: calc(var(--random-displacement-top) * 1vw); left: calc(var(--random-displacement-left) * 1vw)"></div>
+        <div class="image" style="background-image: url('../static/asset/images/self/story.jpg'); top: calc(var(--random-displacement-top) * 1vw); left: calc(var(--random-displacement-left) * 1vw)"></div>
+        <div class="image" style="background-image: url('../static/asset/images/self/wow.jpg'); top: calc(var(--random-displacement-top) * 1vw); left: calc(var(--random-displacement-left) * 1vw)"></div>
     </div>
 
 
