--- a/templates/about.html
+++ b/templates/about.html
@@ -13,11 +13,11 @@
         const body = document.body;
 
         images.forEach(image => {
-            const randomTopDisplacement = Math.floor(Math.random() * 11) * 5; 
-            const randomLeftDisplacement = Math.floor(Math.random() * 11) * 5;
+            const randomTopDisplacement = Math.floor(Math.random() * 31)-5;
+            const randomLeftDisplacement = Math.floor(Math.random() * 31)-5;
             image.style.setProperty('--random-displacement-top', randomTopDisplacement);
             image.style.setProperty('--random-displacement-left', randomLeftDisplacement);
-            
+
             image.addEventListener('mouseenter', () => {
                 // Create a new pop-up image
                 const popup = document.createElement('div');
